# chronicle-pipeline

./: .gitignore  CLAUDE.md  Cargo.toml
docs/: architecture.md
src/: config.rs  error.rs  lib.rs  operator.rs  pipeline.rs  streaming.rs  types.rs  whisper.rs
src/ad/: mod.rs
src/audio/: decode.rs  encode.rs  mix.rs  mod.rs  resample.rs
src/filters/: hallucination.rs  mod.rs  scene_chunker.rs
src/operators/: beat.rs  beats.rs  filter.rs  hallucination.rs  meta_talk.rs  mod.rs  scene.rs  scene_chunker.rs  scenes.rs  segment.rs  transcription.rs
src/operators/vad/: mod.rs  silero.rs
src/transcribe/: mod.rs
src/vad/: mod.rs
tests/: integration.rs
