[package]
name = "chronicle-pipeline"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
metrics = "0.24"
async-trait = "0.1"
ort = { version = "2.0.0-rc.12", optional = true, features = ["load-dynamic"] }
ndarray = { version = "0.16", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["vad"]
vad = ["dep:ort", "dep:ndarray"]
